Global replace of LQCD-III with LQCD-ext~II, resulting from official DOE naming of our hardware project for FY15-FY19.

--- a/SnowmassStyle/CpF-T3/wgreport.tex
+++ b/SnowmassStyle/CpF-T3/wgreport.tex
@@ -661,7 +661,7 @@ nuclear physics have similar computational requirements to those for high
 energy physics and can utilize the same hardware.  Two joint HEP/NP projects,
 LQCD (FY06-FY09) and LQCD-ext (FY10-FY14), have provided funds for hardware
 purchases and support personnel.  USQCD has submitted a proposal for a third
-project, LQCD-III, which would run from FY14-FY19.  These dedicated capacity
+project, LQCD-ext~II, which would run from FY14-FY19.  These dedicated capacity
 resources are allocated by USQCD.  As of the beginning of July 2013, the
 dedicated USQCD hardware at Fermilab, Jefferson Lab, and Brookhaven has a
 total capacity of 570M and 770M core-hours, respectively, on conventional and
@@ -897,7 +897,7 @@ whitepapers~\cite{USQCD_EF_whitepaper13,USQCD_IF_whitepaper13,USQCD_NP_whitepape
 This physics program assumes the availability to USQCD of capability resources
 at the DOE leadership class facilities, as well as the availability of dedicated
 capacity resources at Fermilab, Jefferson Lab, and BNL, deployed and operated
-by the proposed LQCD-III project.  The sustained LQCD Tflop/sec-years provided by
+by the proposed LQCD-ext~II project.  The sustained LQCD Tflop/sec-years provided by
 these resources by year are given in Table ~\ref{tab:fiveyear}. In all, this
 program of physics calculations 
 will require well over an order of magnitude of increased computing capacity
@@ -983,7 +983,7 @@ with a broad array of measured quantities, several of which had not been well me
 
 The USQCD Collaboration, which consists of most theoretical physicists in the U.S. involved in the numerical study of QCD and beyond-the-Standard Model theories using lattice methods, has laid out an ambitious vision for future lattice calculations matched to the experimental priorities of the planned experimental high-energy physics program in the white papers ``Lattice QCD at the Intensity Frontier" and ``Lattice Gauge Theories at the Energy Frontier" \cite{USQCD_IF_whitepaper13,USQCD_EF_whitepaper13}.  These detailed documents present a concrete five-year plan for both the collaboration's foremost scientific goals and the theoretical, algorithmic, and computational strategies for achieving them.
 
-In the U.S., the effort of the lattice gauge-theory community has been supported in an essential way by hardware and software support provided to the USQCD Collaboration.  The USQCD Collaboration's hardware project is up for renewal in 2015, and USQCD is currently in the midst of obtaining CD-0 approval for the LQCD-III project from the DOE.  Achieving the goals outlined in these white papers and meeting the needs of current, upcoming, and future experiments will require continued support of both the national supercomputing centers and of dedicated USQCD hardware through the LQCD-III project, investment in software development through SciDAC funding, and support of postdoctoral researchers and junior faculty through DOE and NSF grants to lab and university lattice gauge theorists.   
+In the U.S., the effort of the lattice gauge-theory community has been supported in an essential way by hardware and software support provided to the USQCD Collaboration.  The USQCD Collaboration's hardware project is up for renewal in 2015, and USQCD is currently in the midst of obtaining CD-0 approval for the LQCD-ext~II project from the DOE.  Achieving the goals outlined in these white papers and meeting the needs of current, upcoming, and future experiments will require continued support of both the national supercomputing centers and of dedicated USQCD hardware through the LQCD-ext~II project, investment in software development through SciDAC funding, and support of postdoctoral researchers and junior faculty through DOE and NSF grants to lab and university lattice gauge theorists.   
 
 The main findings of this report are summarized here:
 
