Fix for E3 tables from Brian

--- a/SnowmassStyle/CpF-E3/wgreport.tex
+++ b/SnowmassStyle/CpF-E3/wgreport.tex
@@ -109,21 +109,21 @@ The current and projected CPU needs for the IF experiments are shown in Table~\r
 
 \begin{tabular}{|l|c|c|c|c|c|c|c|c|c|} 
 
-\hline \hline
+   
 
-Year  &  NO$\nu$A  & MicroBooNE & LBNE & g-2    & MINER$\nu$A & MINOS$+$ & $\mu2e$ & Total Fermilab & Total International\\ \hline 
-2013 & 1000            & 500               & 200     & 500   & 1200                & 1200          & 1800        &   6400               & 1250             \\ \hline
-2014 & 1500            & 750               & 400     & 1000 & 1400                & 1200          & 2300        &   8550               & 1500             \\ \hline
-2015 & 2000            & 1000             & 800     & 1000 & 1600                & 1200          & 2500        & 10100             & 2000            \\ \hline
-2016 & 2500            & 1000             & 1500   & 1000 & 1800                & 1200          & 2500        & 11500             & 2500            \\ \hline
-2017 & 2500            & 1000             & 2000   & 1000 & 1800                & 1200          & 2500        & 12000             & 2500            \\ \hline
-2018 & 2500            & 1000             & 2500  & 1000 & 1500                & 1000          & 2500        & 12000             & 2500            \\ \hline
-2019 & 3000            & 750               & 2500   & 1000 & 1000                & 750            & 3000       &  12000             & 2500           \\ \hline
-2020 & 3000            & 500               & 3000   & 1000 & 1000                & 500            & 3000        & 12000             & 3000           \\ \hline
-2021 & 3000           & 500               & 3000   & 1000 & 1000                & 500            & 3000        &  12000             & 3000           \\ \hline
-2022 & 3000            & 250               & 3500   & 1000 & 1000                & 250            & 3000        & 12000            & 3000          \\ \hline
-2023 & 3000            & 100               & 3800   & 1000 & 1000                & 100            & 3000        & 12000             & 3000          \\ \hline
-\hline \hline
+Year  &  NO$\nu$A  & MicroBooNE & LBNE & g-2    & MINER$\nu$A & MINOS$+$ & $\mu2e$ & Total Fermilab & Total International\\   
+2013 & 1000            & 500               & 200     & 500   & 1200                & 1200          & 1800        &   6400               & 1250             \\  
+2014 & 1500            & 750               & 400     & 1000 & 1400                & 1200          & 2300        &   8550               & 1500             \\  
+2015 & 2000            & 1000             & 800     & 1000 & 1600                & 1200          & 2500        & 10100             & 2000            \\  
+2016 & 2500            & 1000             & 1500   & 1000 & 1800                & 1200          & 2500        & 11500             & 2500            \\  
+2017 & 2500            & 1000             & 2000   & 1000 & 1800                & 1200          & 2500        & 12000             & 2500            \\  
+2018 & 2500            & 1000             & 2500  & 1000 & 1500                & 1000          & 2500        & 12000             & 2500            \\  
+2019 & 3000            & 750               & 2500   & 1000 & 1000                & 750            & 3000       &  12000             & 2500           \\  
+2020 & 3000            & 500               & 3000   & 1000 & 1000                & 500            & 3000        & 12000             & 3000           \\  
+2021 & 3000           & 500               & 3000   & 1000 & 1000                & 500            & 3000        &  12000             & 3000           \\  
+2022 & 3000            & 250               & 3500   & 1000 & 1000                & 250            & 3000        & 12000            & 3000          \\  
+2023 & 3000            & 100               & 3800   & 1000 & 1000                & 100            & 3000        & 12000             & 3000          \\  
+   
 
 \end{tabular}
 
@@ -151,21 +151,21 @@ The current and projected storage needs for the IF experiments are shown in Tabl
 
 \begin{tabular}{|l|c|c|c|c|c|c|c|c|c|} 
 
-\hline \hline
+   
 
-Year  &  NO$\nu$A  & MicroBooNE & LBNE & g-2    & MINER$\nu$A & MINOS$+$ & $\mu2e$ & Total Fermilab & Total Foreign\\ \hline 
-2013 & 1020            & 120               & 20       & 20     & 580                 & 90               & 30          & 1880                 & 750              \\ \hline
-2014 & 3020            & 270               & 40       & 20     & 580                 & 90               & 30          & 5070                 & 750              \\ \hline
-2015 & 5020            & 270               & 80       & 50     & 580                 & 90               & 30          & 6120                 & 1000            \\ \hline
-2016 & 5020           & 270               & 160     & 350   & 580                 & 90               & 30          & 6500                 & 1000            \\ \hline
-2017 & 5020            & 270               & 320     & 350   & 580                 & 90               & 30          & 6660                 & 1300            \\ \hline
-2018 & 5020             & 120               & 900    & 350   & 200                 & 40               & 30          & 6660                 & 1300            \\ \hline
-2019 & 5020             & 60                 & 1200   & 350   & 100                 & 40               & 40          & 6810                 & 1300            \\ \hline
-2020 & 5020             & 60                 & 1800   & 350   & 100                 & 20               & 40          & 7390                 & 1500            \\ \hline
-2021 & 5020             & 60                 & 2500   & 450   & 50                   & 20               & 300        & 7380                 & 1500            \\ \hline
-2022 & 5020             & 20                 & 2500   & 450   & 50                   & 10               & 300        & 7430                 & 1700            \\ \hline
-2023 & 5020            & 10                 & 3000   & 450   & 50                   & 10               & 300        & 7820                 & 2000            \\ \hline
-\hline \hline
+Year  &  NO$\nu$A  & MicroBooNE & LBNE & g-2    & MINER$\nu$A & MINOS$+$ & $\mu2e$ & Total Fermilab & Total Foreign\\   
+2013 & 1020            & 120               & 20       & 20     & 580                 & 90               & 30          & 1880                 & 750              \\  
+2014 & 3020            & 270               & 40       & 20     & 580                 & 90               & 30          & 5070                 & 750              \\  
+2015 & 5020            & 270               & 80       & 50     & 580                 & 90               & 30          & 6120                 & 1000            \\  
+2016 & 5020           & 270               & 160     & 350   & 580                 & 90               & 30          & 6500                 & 1000            \\  
+2017 & 5020            & 270               & 320     & 350   & 580                 & 90               & 30          & 6660                 & 1300            \\  
+2018 & 5020             & 120               & 900    & 350   & 200                 & 40               & 30          & 6660                 & 1300            \\  
+2019 & 5020             & 60                 & 1200   & 350   & 100                 & 40               & 40          & 6810                 & 1300            \\  
+2020 & 5020             & 60                 & 1800   & 350   & 100                 & 20               & 40          & 7390                 & 1500            \\  
+2021 & 5020             & 60                 & 2500   & 450   & 50                   & 20               & 300        & 7380                 & 1500            \\  
+2022 & 5020             & 20                 & 2500   & 450   & 50                   & 10               & 300        & 7430                 & 1700            \\  
+2023 & 5020            & 10                 & 3000   & 450   & 50                   & 10               & 300        & 7820                 & 2000            \\  
+   
 
 \end{tabular}
 
