Modified LQCD-ext II project terminology (DOE says we must call it an extension, not a new project).

--- a/SnowmassStyle/CpF-T3/authorlist.tex
+++ b/SnowmassStyle/CpF-T3/authorlist.tex
@@ -4,8 +4,7 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: T. Blum, R. S. Van de Water} \end{large}
-\begin{large} {\bf Observer: D. Holmgren} \end{large}
+\begin{large} {\bf Conveners: T. Blum, D. Holmgren, R. S. Van de Water} \end{large}
 
 R.~Brower,
 S.~Catterall,
