Added ***draft*** Lattice Field Theory executive summary. Modified wgreport.tex to include T3-executiveSummary.tex. Modified T1-executiveSummary.tex (sorry Spent!) to comment out the   \end{document}

--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -29,5 +29,6 @@
 
 \input Computing/E1-executiveSummary.tex
 \input Computing/T1-executiveSummary.tex
+\input Computing/T3-executiveSummary.tex
 
 \end{document}
