some work on computing report

--- a/SnowmassStyle/Computing/E1-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E1-executiveSummary.tex
@@ -1,29 +1,7 @@
 %%%%% Computing Chapter  %%%%%%%%%%%%%%%%
  
-\chapter{Computing Frontier: Cosmic Frontier Science}
-\label{chap:mag}
+\section{Computing for Cosmic Frontier Science}
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{center}\begin{boldmath}
-
-%\input CpF-E1/authorlist.tex
-%Conveners are also listed separately in authorlist.tex
-
-\end{boldmath}\end{center}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Executive Summary}
-\label{sec:comp-exec}
-
-\subsection{Introduction to the Cosmic Frontier}
 
 The unique importance of the ``Cosmic Frontier'', the interface
 between particle physics, cosmology, and astrophysics has been long
@@ -66,9 +44,9 @@ degeneracies, and reduce systematic errors. These factors are among
 the major drivers for the computational and data requirements that we
 consider below.
 
-\section{Cosmic Frontiers Facilities and Computational Needs}
 
-\subsection{Experimental Facilities}
+\subsection{Cosmic Frontier Computational Needs}
+%%%\subsection{Cosmic Frontier Computational Needs for Experimental Facilities}
 The dramatic increase in data from Cosmic Frontier experiments over
 the last decade has led to fundamental breakthroughs in our knowledge
 of the ``Dark Universe'' and physics at very high energies. Driven by
@@ -100,8 +78,7 @@ near-future VLA Sky Survey (VLASS) will be followed by the Square
 Kilometer Array (SKA) expected to come on-line in 2020 and to generate
 between 300 and 1500PB of data per year.
 
-\subsection{Simulation Facilities}
-
+%%%\subsection{Simulation Facilities}
 The intrinsically observational nature of much of Cosmic Frontier
 science implies a great reliance on simulation and modeling. Not only
 must simulations provide robust predictions for observations, they are
@@ -131,9 +108,8 @@ suggested Virtual Data Facility (VDF) capability at ALCF, NERSC, and
 OLCF, would go a long way towards addressing these issues for Cosmic
 Frontier simulations.
 
-\section{Conclusions}
-
 \subsection{Data Growth and Computational Requirement}
+
 There is a continued growth in data from Cosmic Frontier
 experiments. Survey experiments currently exceed 1PB of stored
 data. Over the next decade the mass of data will exceed 100PB. In
@@ -156,6 +132,7 @@ such as LSST, Euclid, and large radio surveys would argue for at least
 another order of magnitude increase across the board.
 
 \subsection{Computational Resources for Cosmic Frontier Experiments}  
+
 The use of computational resources will need to grow to match the
 associated data rates for the processing and analysis of observational
 data and for simulated astrophysical and cosmological processes. Most
@@ -356,7 +333,7 @@ direction by working together in a large national collaboration. Such
 efforts are now beginning within the Cosmic Frontier and will
 hopefully come to fruition in the near term.
 
-\subsection{The development of Computing} 
+\subsection{The Development of Computing for the Cosmic Frontier} 
 
 While much of the science in Cosmic Frontiers is undertaken by small
 groups of physicists, the collaborations themselves have grown to
@@ -419,9 +396,3 @@ CPU hours & 200M & $>$20G & $> 100$G\\
 \end{table}
 \end{center}
 
-%\section{Summary}
-%\label{sec:comp-summary}
-
-
-
-%\end{document}
