--- a/SnowmassStyle/Computing/T3-executiveSummary.tex
+++ b/SnowmassStyle/Computing/T3-executiveSummary.tex
@@ -1,28 +1,8 @@
 %%%%% Magnetism Chapter  %%%%%%%%%%%%%%%%
  
-\chapter{Computing Frontier: Lattice Field Theory}
+\section{Computing for Lattice Field Theory}
 \label{chap:LFT}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{center}\begin{boldmath}
-
-\input  CpF-T3//authorlist.tex
-%Conveners are also listed separately in authorlist.tex
-
-\end{boldmath}\end{center}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Executive Summary}
-\label{sec:comp-exec}
-
-\subsection{Introduction to Lattice Field Theory}
 
 One of the foremost goals of high-energy physics is to test the Standard Model
 of particle physics and to search for indications of new physics beyond. In
@@ -61,7 +41,7 @@ future computing needs and plans, and argues that continued support of the
 U.S. (and worldwide) lattice-QCD effort is essential to fully capitalize on
 the enormous investment in the high-energy physics experimental program.
 
-\subsection{Scientific Motivation}
+\subsection{Lattice Field Theory Scientific Motivation}
 
 Precision measurements at the energy and intensity frontiers probe
 quantum-mechanical loop effects, and are therefore sensitive to physics at
@@ -115,7 +95,7 @@ Lattice field-theory calculations will also increasingly contribute to
 collider experiments at the LHC 14-TeV run by providing quantitative
 nonperturbative input for Higgs and other new-physics model building.
 
-\subsection{Computing Resources}
+\subsection{Lattice Field Theory Computing Resources}
 
 Substantial high-performance computing resources are needed to calculate
 hadron masses and interactions with sufficient precision to test the Standard
@@ -246,7 +226,7 @@ postdocs and scientific staff to develop new lattice-gauge-theory code cannot
 be supported by grants to lab and university theory groups alone, but must be
 augmented through grant programs such as SciDAC.
 
-\subsection{Summary}
+\subsection{Lattice Field Theory Summary}
 
 The main findings of the report are summarized here:
 
@@ -314,5 +294,3 @@ T.~Applequist {\em et al.} [USQCD Collaboration],
 {\tt http://usqcd.jlab.org/usqcd-software/}.
 
 \end{thebibliography}
-
-\end{document}
