--- a/SnowmassStyle/Computing/authorlist.tex
+++ b/SnowmassStyle/Computing/authorlist.tex
@@ -4,9 +4,9 @@
 
 \begin{center}
 
-\begin{large} {\bf Conveners: L. A. T. Bauerdick, S. Gottlieb} \end{large}
+\begin{large} {\bf Conveners: L. A. T. Bauerdick, S. Gottlieb, list of all subgroup conveners, etc} \end{large}
 
-J.~Smith, 
+ 
 
 \end{center}
 
