--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -1,8 +1,6 @@
 %%%%%% Computing Chapter  %%%%%%%%%%%%%%%%
  
-\chapter{Computing Frontier}
-\label{chap:Computing}
-
+\chapter{Computing Frontier} 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -20,15 +18,14 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{Introduction}
-\label{sec:comp-intro}
-
-
-\section{Summary}
-\label{sec:comp-summary}
+\input Computing/Computing-executiveSummary.tex
 
 \input Computing/E1-executiveSummary.tex
+
 \input Computing/T1-executiveSummary.tex
+
 \input Computing/T3-executiveSummary.tex
+
+\input Computing/T4-executiveSummary.tex
 
 \end{document}
