--- a/SnowmassStyle/driverFile.tex
+++ b/SnowmassStyle/driverFile.tex
@@ -1,26 +1,3 @@
-%%  This is the driver file for working group reports contributed 
-%%   to the Snowmass 2013 proceedings
-
-%%  This file includes brings in all the necessary files to provide the
-%%  format of the Proceedings
-%%
-%%  D. Hitlin   9/23/03   derived from the BABAR Physics Book format
-
-%%  Please do not change anything in this file, except to include the
-%%  name of your file on the next to last line of this file
-
-%%  To use LATEX with this format, you must have the follwing files 
-%%  in the same directory as your text source and figure files
-%%  tcibook.cls
-%%  fancyhea.sty
-%%  work.sty
-%%  epsfig.sty
-%%  workshopsym.tex       This file provides macros for many common symbols
-%%                         Using these macros will provide uniformity of notation
-%%                         for the basic particle symbols, units, etc.
-%%
-%%  These provide the page size, type style, headings, etc.
-
 
 \documentclass{tcibook}
 \usepackage{fancyhea}
@@ -28,6 +5,10 @@
 \usepackage{bm}       %    enables bold math symbols  e.g.  \bm{\gamma}
 \usepackage{graphicx}
 \usepackage{hyperref}      % hypertext links %%ARXIV
+\usepackage{color,xspace,cite}
+
+
+\newcommand{\registered}{\textsuperscript{\textregistered}\xspace}
 
 \input workshopsymbols.tex      %   standard macros for common HEP terms
 
@@ -62,30 +43,10 @@
 \renewcommand{\arraystretch}{1.25}
 \addtolength{\arraycolsep}{-3pt}
 
+\newcommand{\trademark}{\textsuperscript{\texttrademark}\xspace}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%     All of your files should be in a subdirectory.  Here the
-%%%     subdirectory is called Magnetism  .   The title of your
-%%%     report should be   wgreport.tex in that subdirectory.  Input
-%%%     that file here
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \input Computing/wgreport.tex 
-%\input ChargedLeptons/wgreport.tex
-%\input HeavyPhotons/wgreport.tex
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%   Your subdirectory (here Magnetism) should include
-%%%    the files:
-%%%           wgreport.tex
-%%%           authorlist.tex
-%%%         and all needed figures in pdf format
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 
 \end{document}
 
