updated T4 report, in progress

--- a/SnowmassStyle/CpF-T4/journal.bib
+++ b/SnowmassStyle/CpF-T4/journal.bib
@@ -17364,6 +17364,11 @@
  note = "http://www.nersc.gov"
 }
 
+@article{COLA,
+  author = "{CERN openlab}",
+  note = "http://openlab.web.cern.ch"
+}
+
 @article{OSG,
   author = "{Open Science Grid}",
   note = "http://www.opensciencegrid.org"
@@ -17557,3 +17562,27 @@
       year           = "2013"
 }
 
+@article{Kawabata:1995th,
+      author         = "Kawabata, Setsuya",
+      title          = "{A New version of the multidimensional integration and
+                        event generation package BASES/SPRING}",
+      journal        = "Comput.Phys.Commun.",
+      volume         = "88",
+      pages          = "309-326",
+      doi            = "10.1016/0010-4655(95)00028-E",
+      year           = "1995",
+      reportNumber   = "KEK-PREPRINT-94-197",
+      SLACcitation   = "%%CITATION = CPHCB,88,309;%%",
+}
+
+@article{Hagiwara:2013oka,
+      author         = "Hagiwara, K. and Kanzaki, J. and Li, Q. and Okamura, N.
+                        and Stelzer, T.",
+      title          = "{Fast computation of MadGraph amplitudes on graphics
+                        processing unit (GPU)}",
+      year           = "2013",
+      eprint         = "1305.0708",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.comp-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1305.0708;%%",
+}
