rough rough rough

--- a/SnowmassStyle/Computing/wgreport.tex
+++ b/SnowmassStyle/Computing/wgreport.tex
@@ -21,11 +21,16 @@
 \input Computing/Computing-executiveSummary.tex
 
 \input Computing/E1-executiveSummary.tex
+\input Computing/E2-executiveSummary.tex
+\input Computing/E3-executiveSummary.tex
 
 \input Computing/T1-executiveSummary.tex
-
 \input Computing/T3-executiveSummary.tex
-
 \input Computing/T4-executiveSummary.tex
+
+\input Computing/I2-executiveSummary.tex
+\input Computing/I3-executiveSummary.tex
+\input Computing/I4-executiveSummary.tex
+\input Computing/I5-executiveSummary.tex
 
 \end{document}
