--- a/SnowmassStyle/CpF-T4/authorlist.tex
+++ b/SnowmassStyle/CpF-T4/authorlist.tex
@@ -2,13 +2,14 @@
 
 %\hyphenpenalty 10000
 
-\begin{center}
-{\large Conveners: Stefan H{\"o}che$^1$,  Laura Reina$^2$\\
-  Observer: Markus Wobisch$^3$} \\
-\bigskip
-$^1${\it Theoretical Physics Department, SLAC National Accelerator Laboratory}\\
-$^2${\it Department of Physics, Florida State University}\\
-$^3${\it Department of Physics, Louisiana Tech University }\\
+begin{center}
+{\large Conveners: Stefan H{\"o}che,  Laura Reina\\
+  Observer: Markus Wobisch \\[2ex]
+Christian Bauer, Zvi Bern, Radja Boughezal, John Campbell,
+Lance Dixon, Thomas Gehrmann, Junichi Kanzaki, Alexander Mitov,
+Pavel Nadolsky, Fredrick Olness, Michael Peskin, Frank Petriello, 
+Stefano Pozzorini, Frank Siegert, Doreen Wackeroth, Jonathan Walsh, 
+Ciaran Williams}
 \end{center}
 
 
