--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -1,96 +1,71 @@
 
 \section{Computing for Energy Frontier Science}
 
-In an attempt to get a reasonable prediction of the magnitude of
-changes that could be expected from a new program in the next ten
-years, we look back on the changes between the Tevatron and LHC over
-the last 10 years.  In 2003 the Tevatron was in the 3rd year of Run2
-and comparing it to the third year of LHC in 2012 there is a rough
-factor of 10 in the metrics associated with data acquisition and event
-complexity as can be seen in Table~\ref{tab:compare_daq}. In addition
-to the data acquired, the computing scales with the collabroation and
-activity needs and those metrics are shown in
-Table~\ref{tab:compare_coll}.
+Computing for experiments at the energy frontier is now dominated by the huge data
+processing and analysis demands for the Large Hadron Collider (LHC). The scale
+of the LHC computing problem has required to put in place the global computing
+infrastructure of the LHC computing grid, which has been hugely successful. 
+The LHC
+has driven much of the progress toward the usability of a truly distributed
+computing environment, that makes full use of networks to connect a tiered
+system of computing centers at various scales, to federate storage systems
+enabling access to and analysis of hundred-petabyte-scale data sets, and
+allowing to share the use of resources across different science groups, thereby
+increasing overall throughput and productivity. 
 
-\begin{table}[t]
-\begin{center}
-\begin{tabular}{lll}
-Metric & Tevatron (2003) & LHC (2012) \\ \hline
-Trigger rate & 50Hz & 500Hz \\
-Prompt Reconstruction rate/week & 13M Events & 120M events \\
-Re-reconstruction rate & 100M events per month & 800M - 1B events per month \\
-Reconstructed size & 200kB & 1-2MB \\
-AOD size & 20kB & 200-300kB \\
-Reconstruction time & 1-2s on CPUs of the time & \~ 10s on CPUs of the time \\ \hline
-\end{tabular}
-\caption{Relevant data acquisition and complexity metrics comparing Tevatron and LHC at similar points.}
-\label{tab:compare_daq}
-\end{center}
-\end{table}
+Progress in distributed high- throughput computing, in high-performance
+networks, in distributed data management, in remote data access, in work flow
+systems, etc, enables the experiment groups to marshal these diverse
+and distributed resources into coherent systems, for production teams to run
+immense data processing, management, simulation and distribution work flows,
+and for a community of thousands of scientists to perform data analysis.
+Collaboration is an important factor in this success. The Worldwide LHC
+Computing Grid (WLCG)  and national Grid consortia were formed. In the U.S.
+the Open Science Grid is  bringing together sites, experiments, infrastructure
+provider and computing specialists, which is necessary for 
+sustaining and further developing this distributed environment.
 
+Today LHC computing routinely uses 250,000 CPU processor cores and nearly 170
+petabytes of disk storage in addition to large multi-hundred petabyte capacity
+tape libraries.  The experiments generate over a petabyte per second of data
+at the detector device level. Triggering and real-time event filtering  is
+used to reduce this by six orders of magnitude. In the case of LHC experiments
+at the start of Run 2 this makes for a final rate to persistent storage of
+around one gigabyte per second. The main requirement dictating the rate to
+storage is keeping the storage cost, and the  cost of the computing to analyze
+the stored data, at a tolerable level.
 
-\begin{table}[t]
-\begin{center}
-\begin{tabular}{lll}
-Metric & Tevatron (2003) & LHC (2012) \\ \hline
-Collaboration Size & 800 & 2000-3000 \\
-Number of individual analysis submitters per day & 100 & 300-400 \\
-Number of total analysis submitters & 400 & Greater than 1000 \\ \hline
-\end{tabular}
-\caption{Relevant collaboration and participation metric comparing Tevatron and LHC at similar points.}
-\label{tab:compare_coll}
-\end{center}
-\end{table}
+Looking forward, the HL-LHC stands out as a significant challenge, while
+science at energy frontier lepton colliders is unlikely to be constrained by
+computing issues. 
+At the LHC, however, the expected increases in trigger rate, pileup and detector
+complexity (number of channels) could increase the data rates by a about a
+factor of 10 or more.   This order of magnitude increase in storage and CPU
+requirements presents a new challenge for the computing infrastructure and the
+community will need time to prepare for it. The LHC community is beginning to
+review their computing models as they make plans for the next decade.  It is
+anticipated that the general design will be an evolution from the current
+models with the computing resources distributed at computing centers around
+the world.
 
-Combining the increase in complexity, which is reflected in event size
-and reconstruction time, with the increases in physics triggers and
-the improvements in computing technology the total capacity increase
-is much larger.  The globally distributed nature of LHC computing,
-which includes the majority of the computing capacity located away
-from the host lab, places much higher expectation on the networking
-and data handling.  Both of these effects can be seen in
-Table~\ref{tab:compare_comp}.
+The full report on Computing for the Energy Frontier attempts 
+to obtain a prediction of the magnitude of
+changes that should be expected over the coming 10 years, by looking back on 
+the changes between the Tevatron and LHC over the last 10 years. We argue that 
+the resource need increases for Run2 until the HL-LHC upgrade can probably be 
+accommodated with a roughly flat budget profile. However, the change to HL-LHC
+will be a large disruptive step like from the Tevatron to the LHC, and will require
+very significant additional resource needs, and a disruptive change in
+technologies and approaches to make up for the large resource increase. 
 
-\begin{table}[t]
-\begin{center}
-\begin{tabular}{lll}
-Metric & Tevatron (2003) & LHC (2012) \\ \hline
-Remote Computing Capacity & 15kHS06 (DZero Estimated) & 450kHS06 (CMS) \\
-User Jobs launched per day & 10k per day & 200-300k jobs per day \\
-Disk Capacity per experiment in PB & 0.5PB & 60PB \\
-Data on Tape per experiment  & 400TB & 70PB \\
-MC Processing Capacity per month for Full Simulation & 3M & 300M \\
-Data Served from dCache at FNAL per day & 25TB & 10PB \\
-Wide Area networking from host lab & 200Mb/s & 20000Mb/s \\
-Inter VO transfer volume per day & 6TB (DZero SAM) & 546TB (ATLAS) \\ \hline
-\end{tabular}
-\caption{Relative capacity comparisons between Tevatron and LHC at similar points.}
-\label{tab:compare_comp}
-\end{center}
-\end{table}
+Like going from LHC to HL-LHC, in going from the Tevatron to LHC 
+the data rates increased by about a factor of ten. However, 
+the total capacity increased went up by a factor of thirty, 
+and the disk capacity, the local data served, the wide area
+networking from the host lab, and the inter-site transfers all
+increased by a factor of 100 to accommodate this step. 
 
-
-The processing capacity between the 2 programs has increased by a
-factor of 30, which is almost exactly what would be expected by the 2
-year Moore's law doubling cycle.  This is also reflected in the number
-of user jobs, which will normally expand to fill the available
-resources.  The disk capacity, the local data served, the wide area
-networking from the host lab, and the inter-site transfers are all
-increased by a factor of 100.  This is caused by the change in
-computing model to have a much high degree of distribution, but even
-more impacted by the factor of 10 increase in trigger rate and the
-factor of 10 increase in event size.  The full event simulation
-capacity is also 100 times larger in the LHC program, which may
-indicate the larger importance of simulation.  The factor of 30
-increase in processing with a factor of 100 increase in IO and storage
-makes an argument that processing scales as what can be accommodated
-by Moore's law, and storage and IO scale with trigger rate and event
-size.  The LHC has been successful even though these two numbers have
-not increased at the same rate, but points toward the effort expended
-in making efficient code and points toward issues facing computing for
-the energy frontier moving forward.
-
-The increase in LHC computing and disk storage is shown in
+The increase in LHC computing and disk storage since its start is shown in
 Figure~\ref{fig:growth}.  The CPU increases at a rate of 363kHS06 per
 year and the disk at 34PB a year on average.  The rough linear
 increase is the combination of three separate periods that average to
@@ -102,10 +77,7 @@ and analyze.  The resources needed to accommodate the higher trigger
 rate and event complexity expected in the second run define 2015.  The
 three periods roughly average out to a linear increase.
 
-In energy frontier computing data tends to be analyzed intensively at
-the beginning and then archived and accessed less as most of the
-relevant results are gleaned from the data in the first few years
-after collection.  Therefore, the growth curves below do not scale
+The growth curves below do not scale
 with total integrated luminosity but indicate that more inputing is
 needed per unit time as trigger rates and event complexity increase.
 It is not reasonable to expect that the techniques currently used to
@@ -128,20 +100,116 @@ and methods moving forward.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+Using those cures to extrapolate out 10 years,  LHC computing would have
+roughly 3 times the computing expected in 2015, which is lower than the
+Moore's law doubling expectations.  LHC would reach nearly 800PB of disk by
+2023, which again is roughly a factor of 3 over 2015.   These increases could
+probably be achieved with close to flat budgets for computing.   There are
+potential efficiency improvements and new techniques that will be discussed
+below.
 
-If we extrapolate out 10 years, LHC computing would have roughly 3
-times the computing expected in 2015, which is much lower than Moore's
-law doubling expectations.  LHC would reach nearly 800PB of disk by
-2023, which is again roughly a factor of 3 over 2015.  The LHC numbers
-are probably sustainable with this rates and budgets that are close to
-flat for computing.  There are potential efficiency improvements and
-new techniques that will be discussed below.  More concerning is a
-potential new program like a Super LHC, an ILC, or a LEP3 where the
-luminosity or complexity increases dramatically and computing is not
-on the curve in Figure~\ref{fig:growth}, but is a shift like the
-difference between Tevatron Run2 and LHC Run1.  The proposed changes
-below will potentially help make better use of the computing available
-for LHC, and will be critical as Energy Frontier machines begin to
-have data rates and conditions that would be expected in intensity
-frontier computing.
+However, going to the HL-LHC or other proposed hadron collider programs,  the
+luminosity and complexity increases dramatically and computing would not be on
+the curve in Figure~\ref{fig:growth}, but would comprise a shift like HEP
+experienced by going from Tevatron Run2 to LHC Run1.
+This will require disruptive changes like the ones described  below, to make
+better use of the computing available.
+
+
+Moving forward we identify two trends: specialized hardware and computing as a service.
+
+On one side the Energy frontier will need to evolve to use alternative
+computing architectures and platforms like GPUs and other co-processors, low-
+power "small" cores, etc, as the focus of industry development is moving away
+from the classic server CPU.  Using GPUs introduces significant diversity to
+the system, complicates the programming, and changes the approaches used in
+scientific calculation, but can increase performance by orders of magnitude
+for specific types of calculations.  Co-processors have similar potential
+improvement gains, but also increase the diversity and complexity of the system, and pose
+additional programming challenges.  Low power mobile platforms are most
+interesting when they are combined into massively parallel, specialized system
+where a single box may have the same number of cores as a remote computing
+center does today.  These systems would be used more like a super computer and
+less like a batch farm, which will require the field to grow expertise in this
+much more interconnected computing environment.
+
+Specialized hardware and architectures is likely to be deployed begin in
+extremely well controlled environments like trigger farms and other dedicated
+centers where the hardware and be controlled and specified. The next phase is
+likely to be schedulable dedicated specialized systems to permit large-scale
+calculations to achieve a goal similar to making a super computer center
+request.  Large scale clusters of specialized hardware owned by the experiment
+are likely to come last, and are only likely to come if they can completely
+replace a class of computing resources and perform a function at a reduced
+cost and higher efficiency.
+
+The other trend impacting energy frontier computing is the move to
+computing as a service and other "cloud" solutions.  Currently
+commercial offerings, academic resources and opportunistic resources
+are all being offered through cloud provisioning techniques.  While
+commercial solutions are still more expensive than well used dedicated
+resources, there is a steady decrease in the pricing. 
+
+Energy frontier
+computing should expect a transition to more shared and opportunistic
+resources provided through a variety of interfaces, including cloud interfaces.  
+Effort is needed
+to allow the community to make effective use of the diverse
+environments and to perform resource provisioning across dedicated,
+specialized, contributed, opportunistic, and purchased resources.
+
+There are considerable concerns regarding the enormous increase 
+in data produced by the next round of energy frontier colliders,  
+to be ingested by the offline computing systems. 
+We observe that while
+the energy frontier processing capacity has increased largely with what would be expected from
+Moore's law and relatively flat budgets, the storage requirements have
+grown much faster.  The larger number of sites and the need for local
+caches, the increase in trigger rates, and the larger event sizes
+drives the need for disk-based storage.  
+
+For EF discovery physics and searches there is a case for storing
+potentially interesting events and applying various hypotheses to look
+for new physics.  For some searches and many measurements an approach
+where much more of the processing and analysis is done with the
+initial data collection and only synthesized output is archived has
+the potential for preserving physics while reducing the offline
+processing and storage needs.  Already the ALICE experiment is
+proposing mostly online reconstruction after LHC Long Shutdown 2
+(LS2).  In future accelerators there will be strong
+motivations to reconstruct and calibrate online and write only
+constants.
+
+We expect a change of the mentality that a higher trigger rate is always better, and needs to be kept.  As the energy frontier trigger rates go up by order of magnitude, as expected for LHC running and certainly for the HL-LHC, the experiments should expect to be more
+selective in what classes of events to fully reconstruct, and instead develop an approach of on-demand reconstruction, calibration, and
+analysis.
+
+Simulation and reconstruction are entirely
+derived data and can be reproduced and already many of the
+intermediate steps are treated as transient.  More of the analysis steps should be moved into the production
+chain, only keeping the final output, with the knowledge it can be
+re-derived if required later.
+
+With the expected increased diversity of computing resources, energy frontier
+computing needs to develop a data management system that can deal with
+all of them.  A system that handles the placement of the data and
+allows the operations team and analysis users to concentrate more on
+execution of work flows and less on placement and location of data is
+needed.  
+
+Industry has put a focus on delivering
+content either through CDNs (Content Delivery Networks) 
+or through peer-to-peer systems.  In the
+next decade computing processing for the energy frontier will evolve
+to be less deterministic, with more emphasis on cloud provisioned
+resources, opportunistic computing, local computing, and volunteer
+computing.  The data management system needs to evolve to be much less
+deterministic as well in order to make efficient use of the diverse
+landscape of resources that the experiment computing models will have to adapt to. 
+
+The development of a data intensive content delivery network
+should not be unique to one experiment, and should even be applicable
+to several scientific domains, but will require commitment and effort
+to develop.
+
 
