added summary for I2, edits to EF

--- a/SnowmassStyle/Computing/E2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/E2-executiveSummary.tex
@@ -1,7 +1,7 @@
 
 \section{Computing for Energy Frontier Science}
 
-Computing for experiments at the energy frontier is now dominated by the huge data
+Computing for experiments at the "Energy Frontier" (EF) is now dominated by the huge data
 processing and analysis demands for the Large Hadron Collider (LHC). The scale
 of the LHC computing problem has required to put in place the global computing
 infrastructure of the LHC computing grid, which has been hugely successful. 
