--- a/SnowmassStyle/Computing/I2-executiveSummary.tex
+++ b/SnowmassStyle/Computing/I2-executiveSummary.tex
@@ -5,7 +5,7 @@ The field of particle physics has become increasingly reliant on large-scale com
 
 In this report for the Snowmass Computing Frontier Study, we consider several questions about distributed computing and facility infrastructures that could impact future resource requirements and research directions.  Two other efforts to understand these issues during the past year have been major resources for this report.  One was a review conducted by NERSC in November 2012 to determine HEP community computing and storage needs through 2017 (reference it here).  Another was a panel discussion on the future of grid computing held at the Open Science Grid All-Hands Meeting in March 2013~\cite{bib:OSGpanel}.  We thank all of the participants in these discussions for their contributions.
 
-\section{Current HEP Use of the U.S. National Computing Infrastructure}
+\subsection{Current HEP Use of the U.S. National Computing Infrastructure}
 
 Different computational problems in particle physics are naturally suited for different kinds of computing facilities.  In general, there are two paradigms.  One is high-throughput computing (HTC), which is implemented in standard commodity computers and can address problems that are ``embarrassingly parallel,'' i.e., those that can be computed independently with the results combined afterward.  The other is high performance computing (HPC), which uses supercomputers to solve large problems by distributing computational work among many processors and using specialized high-speed, low-latency networks to communicate partial results among processors during execution of the job.
 
@@ -54,7 +54,7 @@ allow prototyping the next generation of parallel computer programs
 for QCD phenomenology and precision calculations.
 
  
-\section{Future Availability of Resources}
+\subsection{Future Availability of Resources}
 
 
 The needed computing resources for Energy Frontier experiments are currently set by the needs of the CMS and ATLAS experiments.  Both of these experiments have had several years of running experience and have developed the tools to predict future resource needs as a function of experimental parameters such as the trigger rate, pileup distribution, event size, number of reprocessing and analysis passes per year and so forth.  These models have been shown to be reasonably predictive~\cite{bib:CHEPresources}.
@@ -86,4 +86,21 @@ LQCD researchers estimate needing 10s of billions of  hours in 2017, much more t
 for LQCD if historical trends hold.
 
 HPC needs for accelerator research and design are growing, too, but are expected to be accommodated by planned HPC center capacity and capability increases (cite NERSC report). 
+
+\subsection{Summary of Distributed Computing and Facility Infrastructures}
+
+Powerful distributed computing and robust facility infrastructures are essential to the continued progress of particle physics across all of its defined frontiers of experimental approaches.  Those approaches, and the theoretical work needed to support them, require a combination of both HTC and HPC systems.  The dominant consumers of HTC are the LHC experiments, who have been well served by it and should be in the future also.  Most intensity-frontier experiments can be supported by HTC also.  HPC is needed for applications such as lattice QCD, accelerator design and R\&D, data analysis and synthetic maps, N-body and hydro-cosmology simulations, supernova modeling, and more recently perturbative QCD.  HPC tasks have historically been carried out at national centers that have focused primarily on HPC facilities, but these centers have begun to embrace the problems that are addressed by HTC and are interested in attracting scientists who want to work at these centers.
+
+Energy-frontier experiments face a growth in data that will make it a challenge to supply the needed computing resources.  Doing so is possible as long as certain conditions are in place and specific steps are taken to keep up with evolving technologies.  It requires near-constant funding of the WLCG, greater efficiencies in resource usage, and the evolution of software to take advantage of multicore processor architectures.  These experiments should also pursue and take advantage of opportunistic resources, be they in commercial clouds (which are not currently viable as purchased resources), universities, DOE centers or elsewhere.  The experiments would also benefit from further engagement with national HPC centers, which have resources available to HEP experiments and can support efforts to make use of HPC systems that have not traditionally been used for HTC applications for applications such as detector simulations.
+
+Intensity-frontier experiments have smaller computing needs in comparison, and there is nothing technically that prevents them from being met.  Such experiments should be aware of the existence of resources available to them through the OSG or at national computing centers, and they could benefit from a coordinated effort amongst them to gain access to resources and share software and training.
+
+Cosmic-frontier experiments and the simulations needed to interpret them are among the drivers of a need for growth in HPC resources in the coming years, along with lattice QCD and accelerator design.  Indeed, demand for access to HPC across HEP is expected to exceed the expected availability.  
+Such computations are critically needed to interpret results from a number of important experiments and realize scientific returns from national investments in those experiments.  The NERSC report on HEP computing needs indicates a shortage of HPC resources needed for HEP by a factor of four by 2017.  While funding and technology development needed to sustain traditional HPC growth rates are uncertain, they must be maintained to support HEP science.
+
+Distributed computing infrastructures, which have been critical to the success of the LHC experiments, should continue to be able to serve these and other applications even as they grow in scale.  There are no show-stoppers seen in increasing scale, but various developments should be purused to improve efficiency and ease of use.  Keeping sufficient staff support at a reasonable cost is a continuing concern; finding operational efficiencies could help address this.  Given that HEP is the largest user of distributed scientific computing, currently in the form of grid computing, members of the field must continue to take a leadership role in its development.
+
+National centers play an important role in some aspects of computing, and HEP might be able to take advantage of an expanded role.  It is already used in many of the applications listed above.  While there are not enough resources dedicated to HEP available at the centers to rival those of the WLCG, experiments should explore the use of the centers as part of their efforts to diversify their computing architectures.  These centers do have access to large, state-of-the-art resources, operational support and expertise in many areas of computing.
+
+We expect that distributed computing and facility infrastructures will continue to play a vital role in enabling discovery science.
 
